[tool.poetry]
name = "pdftool"
version = "0.1.0"
description = ""
authors = ["Gjermund Tomasgard <gtomasgard@gmail.com>"]

[tool.poetry.dependencies]
python = "<3.11,>=3.6"
PyPDF4 = "^1.27.0"
pyinstaller = "^4.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
merge = "pdftool.pdfmerge:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
